2009-12-12  Robert Millan  <rmh@aybabtu.com>

	* gendistlist.sh (EXTRA_DISTFILES): Add `genvideolist.sh'.
	* genmk.rb (video): New variable.
	(CLEANFILES, VIDEOFILES): Add #{video}.
	(#{video}): New target rule.
	* genvideolist.sh: New file.
	* Makefile.in (pkglib_DATA): Add video.lst.
	(video.lst): New target rule.
	* util/grub-mkconfig.in: Initialize ${GRUB_VIDEO_BACKEND} using
	`video.lst'.
	* util/grub.d/30_os-prober.in: Replace `vbe' with
	${GRUB_VIDEO_BACKEND}.

2009-12-11  Robert Millan  <rmh.grub@aybabtu.com>

	* THANKS: Add David Miller.

2009-12-11  Vladimir Serbinenko  <phcoder@gmail.com>

	libpciaccess support.

	* Makefile.in (LIBPCIACCESS): New variable.
	(enable_grub_emu_pci): Likewise.
	* conf/any-emu.rmk (grub_emu_SOURCES) [enable_grub_emu_pci]: Add
	util/pci.c and commands/lspci.c.
	(grub_emu_LDFLAGS) [enable_grub_emu_pci]: Add $(LIBPCIACCESS).
	* configure.ac (grub-emu-pci): New option.
	* include/grub/i386/pci.h (grub_pci_device_map_range): New function.
	(grub_pci_device_unmap_range): Likewise.
	* include/grub/pci.h [GRUB_UTIL]: Include grub/pciutils.h.
	(grub_pci_device) [!GRUB_UTIL]: New structure. All users updated.
	(grub_pci_address_t) [!GRUB_UTIL]: New type.
	(grub_pci_device_t) [!GRUB_UTIL]: Likewise.
	(grub_pci_get_bus) [!GRUB_UTIL]: New function.
	(grub_pci_get_device) [!GRUB_UTIL]: Likewise.
	(grub_pci_get_function) [!GRUB_UTIL]: Likewise.
	* include/grub/pciutils.h: New file.
	* util/pci.c: Likewise.

2009-12-11 Felix Zielcke <fzielcke@z-51.de>

	* util/misc.c: Don't include <errno.h> twice.

2009-12-10 Felix Zielcke <fzielcke@z-51.de>

	* disk/i386/pc/biosdisk.c (grub_biosdisk_open): Show the disk
	name in an error message.
	(grub_biosdisk_rw): Likewise.

2009-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Eliminate NTFS 4Gib barrier.

	* fs/ntfs.c (read_attr): Use grub_disk_addr_t and grub_size_t.
	(read_run_data): Likewise.
	(grub_ntfs_read_run_list): Likewise.
	(grub_ntfs_read_block): Likewise.